--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Dashboard webapp to track group mining rig",
   "main": "host.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node host.js"
   },
   "author": "Callum Todd",
   "license": "ISC",
